tests/parsing/smtlib/poly/errors/167_function_decl_par_bad_var_1.expected
File "tests/parsing/smtlib/poly/errors/167_function_decl_par_bad_var_1.psmt2", line 2, character 29-30:
2 | (define-funs-rec ((foo (par (_)))))
                                 ^
Error while parsing a function declaration, read the reserved word '_',
      but expected a sort variable.
